[gd_scene load_steps=3 format=3 uid="uid://besrdc28fcimv"]

[ext_resource type="Script" uid="uid://cvllleqigwqxq" path="res://project/scripts/l_body.gd" id="1_0tntg"]
[ext_resource type="Texture2D" uid="uid://bwbjciov7mvq6" path="res://project/assets/L-TertrominoB.png" id="1_p8enh"]

[node name="L_tetromino" type="Node2D"]

[node name="L_body" type="CharacterBody2D" parent="."]
position = Vector2(24, -8)
input_pickable = true
script = ExtResource("1_0tntg")

[node name="L_collision" type="CollisionPolygon2D" parent="L_body"]
position = Vector2(-24, 8)
polygon = PackedVector2Array(0, -16, 48, -16, 48, 0, 16, 0, 16, 16, 0, 16, 0, 0)

[node name="L_shape" type="Sprite2D" parent="L_body"]
texture_filter = 1
texture = ExtResource("1_p8enh")
offset = Vector2(0, 8)

[node name="Area2D" type="Area2D" parent="L_body"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="L_body/Area2D"]
position = Vector2(-24, 8)
polygon = PackedVector2Array(0, -16, 48, -16, 48, 0, 16, 0, 16, 16, 0, 16, 0, 0)

[node name="RayCastA" type="RayCast2D" parent="L_body"]
target_position = Vector2(0, 16)

[node name="RayCastB" type="RayCast2D" parent="L_body"]
position = Vector2(16, 0)
target_position = Vector2(0, 16)

[node name="RayCastC" type="RayCast2D" parent="L_body"]
position = Vector2(-16, 16)
target_position = Vector2(0, 16)

[node name="RayCastD" type="RayCast2D" parent="L_body"]
position = Vector2(16, 0)
target_position = Vector2(16, 0)

[node name="RayCastE" type="RayCast2D" parent="L_body"]
position = Vector2(-16, 16)
target_position = Vector2(16, 0)

[node name="RayCastF" type="RayCast2D" parent="L_body"]
position = Vector2(-16, 16)
target_position = Vector2(-16, 0)

[node name="RayCastG" type="RayCast2D" parent="L_body"]
position = Vector2(-16, 0)
target_position = Vector2(-16, 0)

[node name="RayCastH" type="RayCast2D" parent="L_body"]
position = Vector2(-16, 0)
target_position = Vector2(0, -16)

[node name="RayCastI" type="RayCast2D" parent="L_body"]
target_position = Vector2(0, -16)

[node name="RayCastJ" type="RayCast2D" parent="L_body"]
position = Vector2(16, 0)
target_position = Vector2(0, -16)

[connection signal="input_event" from="L_body/Area2D" to="L_body" method="_on_area_2d_input_event"]
